# pygccxml

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  MANIFEST.readme  Makefile  NOTICE  README.rst  README.txt  announcement.txt  appveyor.yml  pyproject.toml  setup.py
.binder/: Dockerfile  README.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  credits.rst  definition.irest  definition.rest  design.rest  design.rst  documentation.rst  download.rest  download.rst  example.hpp  example.hpp.rest  example.hpp.xml  example.py  example.py.rest  examples.rst  faq.rst  history.rst  index.rst  install.rst  links.rest  links.rst  make.bat  pkg-info.txt  pygccxml.rest  pygccxml_uml.vsd  query_api.rest  query_interface.rest  query_interface.rst  releasing.rst  upgrade_issues.rest  upgrade_issues.rst  users.rest  users.rst  www_configuration.py
docs/apidocs/: api.rest  api.rst  binary_parsers.rest  binary_parsers.rst  binary_parsers.txt  declarations.rest  declarations.rst  modules.txt  parser.rest  parser.rst  utils.rest  utils.rst  (+1 more)
gccxml-0.9-upgrade/: const_variables.7.xml  const_variables.9.xml  const_variables.h  const_variables.h.diff  default_args.7.xml  default_args.9.xml  default_args.h  default_args.h.diff  demangled.7.xml  demangled.9.xml  demangled.h  demangled.h.diff  offset.7.xml  offset.9.xml  offset.h  offset.h.diff  types.7.xml  types.9.xml  types.h  types.h.diff  union_and_struct.7.xml  union_and_struct.9.xml  union_and_struct.h  union_and_struct.h.diff  volatile_arg.7.xml  volatile_arg.9.xml  volatile_arg.h
gccxml_installer/: build_setup.py  config.py
pygccxml/: __init__.py
release_utils/: __init__.py  utils.py
tests/: autoconfig.py  conftest.py  example_tester_wrap.py  parser_test_case.py  test_algorithms_cache.py  test_argument_without_name.py  test_array_argument.py  test_array_bug.py  test_attributes.py  test_better_templates_matcher.py  test_bit_fields.py  test_cache_enums.py  test_cached_source_file.py  test_call_invocation.py  test_calldef_matcher.py  test_calling_convention.py  test_castxml_wrong_epic.py  test_ccflags.py  test_comments.py  test_complex_types.py  test_config.py  test_const_volatile_arg.py  test_copy_constructor.py  test_copy_constructor2.py  test_core.py  test_cpp_standards.py  test_create_decl_string.py  test_decl_printer.py  test_decl_string.py  test_declaration_files.py  test_declaration_matcher.py  test_declarations.py  test_declarations_cache.py  test_declarations_comparison.py  test_dependencies.py  test_deprecation.py  test_directory_cache.py  test_dynamic_exception.py  test_elaborated_types.py  test_example.py  (+46 more)
unittests/: algorithms_cache_tester.py  array_bug_tester.py  attributes_tester.py  autoconfig.py  better_templates_matcher_tester.py  bit_fields_tester.py  bsc_tester.py  cache_enums_tester.py  cached_source_file_tester.py  call_invocation_tester.py  calldef_matcher_tester.py  calling_convention_tester.py  complex_types_tester.py  const_volatile_arg_tester.py  copy_constructor_tester.py  core_tester.py  decl_printer_tester.py  decl_string_tester.py  declaration_files_tester.py  declaration_matcher_tester.py  declarations_cache_tester.py  declarations_comparison_tester.py  declarations_tester.py  demangled_tester.py  dependencies_tester.py  deprecation_tester.py  example.py  example_tester.py  example_tester_wrap.py  file_cache_tester.py  filtering_tester.py  filters_tester.py  find_container_traits_tester.py  free_operators_tester.py  from_future_import_tester.py  function_traits_tester.py  gccxml.cfg  gccxml10183_tester.py  gccxml10184_tester.py  gccxml10185_tester.py  (+67 more)
(+331 files in other folders)
